fix (01.02.2022) line glowing + roadmap lines on mobile

--- a/src/scss/_buy-section.scss
+++ b/src/scss/_buy-section.scss
@@ -65,13 +65,33 @@
     }
   }
 
+  .lineContainer {
+    position: relative;
+    height: 35vh;
+    width: 130px;
+    overflow: hidden;
+  }
+
+  .topOpacity {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background: $bg;
+    -webkit-box-shadow: 1px 60px 100px 100px rgba(14, 23, 40, 0.7);
+    -moz-box-shadow: 1px 60px 100px 100px rgba(14, 23, 40, 0.7);
+    box-shadow: 1px 60px 100px 100px rgba(14, 23, 40, 0.7);
+  }
+
   .gradientLine {
     margin: 20px auto 0px auto;
     width: 4px;
-    height: 35vh;
+    height: calc(35vh + 4px);
     background: linear-gradient(0deg, #6FE5FF 1.49%, rgba(193, 248, 255, 0) 100%);
-    box-shadow: 0 0 0.6rem rgba(112, 229, 255, 0.1), 0 0 1.5rem rgba(112, 229, 255, 0.1),
-      -0.2rem 0.1rem 1rem rgba(112, 229, 255, 0.1), 0.2rem 0.1rem 1rem rgba(112, 229, 255, 0.1),
-      0 -0.5rem 2rem rgba(112, 229, 255, 0.1), 0 0.5rem 3rem rgba(112, 229, 255, 0.1);
+    // box-shadow: 0 0 0.6rem rgba(112, 229, 255, 0.4), 0 0 1.5rem rgba(112, 229, 255, 0.4),
+    //   -0.2rem 0.1rem 1rem rgba(112, 229, 255, 0.4), 0.2rem 0.1rem 1rem rgba(112, 229, 255, 0.4),
+    //   0 -0.5rem 2rem rgba(112, 229, 255, 0.4), 0 0.5rem 3rem rgba(112, 229, 255, 0.4); 
+    -webkit-box-shadow: 1px 11px 23px 3px rgba(112, 229, 255, 0.4);
+    -moz-box-shadow: 1px 11px 23px 3px rgba(112, 229, 255, 0.4);
+    box-shadow: 1px 11px 23px 3px rgba(112, 229, 255, 0.4);
   }
 }
