--- a/src/scss/_main-section.scss
+++ b/src/scss/_main-section.scss
@@ -107,9 +107,9 @@
     width: 4px;
     height: 35vh;
     background: linear-gradient(0deg, #6FE5FF 1.49%, rgba(193, 248, 255, 0) 100%);
-    box-shadow: 0 0 0.6rem rgba(112, 229, 255, 0.1), 0 0 1.5rem rgba(112, 229, 255, 0.1),
-      -0.2rem 0.1rem 1rem rgba(112, 229, 255, 0.1), 0.2rem 0.1rem 1rem rgba(112, 229, 255, 0.1),
-      0 -0.5rem 2rem rgba(112, 229, 255, 0.1), 0 0.5rem 3rem rgba(112, 229, 255, 0.1);
+    box-shadow: 0 0 0.6rem rgba(112, 229, 255, 0.4), 0 0 1.5rem rgba(112, 229, 255, 0.4),
+      -0.2rem 0.1rem 1rem rgba(112, 229, 255, 0.4), 0.2rem 0.1rem 1rem rgba(112, 229, 255, 0.4),
+      0 -0.5rem 2rem rgba(112, 229, 255, 0.4), 0 0.5rem 3rem rgba(112, 229, 255, 0.4);
     animation-duration: 2s;
     animation-name: slidein;
   }
